--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "10ddea01-eff6-4e21-acca-d31f309c5d98"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
